clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
_Owned struct A {
    public:
    int * _Owned a;
    ~A(A this) {
    } // expected-error {{destructor for`_Owned struct A` incorrect, this.a is of _Owned type and needs to be handled manually}}
};
int main() {
    int local = 1;
    A a ={ .a = (int * _Owned)&local };
    return 0;
}
